examples/test/testpolicy11576.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11576
  namespace: namespace314
spec:
  podSelector:
    matchLabels:
      key12: value14
      key28: value7
      key43: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value9
          key5: value2
      podSelector:
        matchLabels:
          key14: value29
